--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"type":"module","name":"backendsandinotrigo","version":"1.0.0","description":"","main":"app.js","scripts":{"start":"node app.js", "dev":"nodemon app.js"},"keywords":[],"author":"","license":"ISC","dependencies":{"express":"^4.18.2"}}
+{"type":"module","name":"backendsandinotrigo","version":"1.0.0","description":"","main":"app.js","scripts":{"start":"node app.js","dev":"nodemon app.js"},"keywords":[],"author":"","license":"ISC","dependencies":{"express":"^4.18.2","express-handlebars":"^7.0.7","socket.io":"^4.6.1"}}
